--- a/world/templates/post.html
+++ b/world/templates/post.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title%} Create your Blog Post{% endblock%}
+{% block title%} My Posts {% endblock%}
 
 {% block content %}
 
