--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -16,108 +16,85 @@
 
     <!-- Font-Awesome-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <title>Hello, World!| Blog</title>
+    <!--Boostrap-->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     </script>
 
 
-    <title>{% block title %}Hello world Blog!{%endblock%}</title>
-    
-
-  </head>
-  <body>
-    <!--Nav starts-->
-    <header>
-        <div class="container header">
-            <a href="{% url 'index' %}" class="logo">Travel, World!| Blog<span>.</span></a>
-            <div class="menuToggle">
-                  <i class="fas fa-bars"></i>
-            </div>
-            {% if caty_menu %}
-            <ul class="navigation">
-                <li class="active"><a href="{% url 'register' %}">Register Now</a></li>
-                <li><a href="{% url 'login' %}">Sign in</a></li>
-            {% endif %}
-            {% if user.is_authenticated %}
-                <li><a href="{% url 'post' %}">My Post</a></li>
-                <li><a href="{% url 'create_profile_page'%}">Create Bio</a></li>
-                <li><a href="{% url 'show_profile_page' user.profile.id %}">Profile Page</a></li>
-                <li><a href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a></li>
-                <li><a href="{% url 'edit_profile' %}">Account Settings</a></li>
-            {% endif %}
-                <li><a href="{% url 'logout' %}">Logout</a></li>
-                
-            </ul>
-          </div>
-    </header>
-    <!--Nav end-->
+    <title>{% block title %}Travel, World!| Blog!{% endblock %}</title>
 
 
-    <!--main content -->
-
-    <div class="container main">
-        <!--column1 -->
-       <div class="col">
-        {% for post in object_list %}
-              <div class="post">
-                  <img class="post-img" src="{% static 'img/travel02.jpg'%}" alt=""/>
-  
-                  <div class="post-info">
-                      <h2><a href="{% url 'details-article' post.pk %}">{{ post.title }}</a></h2>
-                      <div class="user-info">
-                          <img src="{% static 'img/profilepicture.jpg'%}" alt="">
-                          <span>{{ post.author.first_name }}  {{ post.author.last_name}}</span>
-                          <span><a class="py-2 px-3 mb-2"><i class="mr-2 fa fa-calendar" aria-hidden="true"></i> {{ post.publish_date }}</a></span>
-                          <span><a href="{% url 'details-article' post.pk %}" > {{ post.title }}</a></span>
-                      </div>
-  
-                      <p>lorem lorem loremlorem lorem loremlorem lorem loremlorem lorem lorem
-                      lorem lorem loremlorem lorem loremlorem lorem lorem
-                  </p>
-                  </div>
-              </div>
-          {% endfor %}
-       </div>
-       <!--column2-->
-       <div class="col">
-          <div class="post">
-              <img class="post-img" src="{% static 'img/travel02.jpg'%}" alt=""/>
-
-              <div class="post-info">
-                  <h2>{{ post.title }}</h2>
-                  <div class="user-info">
-                      <img src="{% static 'img/profilepicture.jpg'%}" alt="">
-                      <span>User Name</span>
-                      <span>Date 1.2021</span>
-                      <span>Category</span>
-                  </div>
-
-                  <p>lorem lorem loremlorem lorem loremlorem lorem loremlorem lorem lorem
-                  lorem lorem loremlorem lorem loremlorem lorem lorem
-
-                  lorem lorem loremlorem lorem loremlorem lorem loremlorem lorem lorem
-                  lorem lorem loremlorem lorem loremlorem lorem loremlorem lorem loremlorem lorem loremlorem lorem loremlorem lorem lorem
-                  lorem lorem loremlorem lorem loremlorem lorem lorem
-                  lorem lorem loremlorem lorem loremlorem lorem loremlorem lorem lorem
-                  lorem lorem loremlorem lorem loremlorem lorem lorem
-              </p>
-              </div>
-          </div>
-       </div>
-
+  <!--Nav Bar-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="{% url 'index' %}">Hello World Blog!</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">About</a>
+          </li>
+         
+          
+          <!---Category Menu Code-->
+          {% if caty_menu %}
+          
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                {{ user.first_name }} {{ user.last_name }}
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                {% if user.profile.user %}
+                  <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Account Settings</a></li>
+                  <li><a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a></li>
+                  <li><a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Profile Page</a></li>
+                  
+                {%else %}
+                    <li><a class="dropdown-item" href="{% url 'create_profile_page'%}">Create Bio Page</a></li>
+                {% endif %}
+              </ul>
+            </li>
+          
+          {% endif %}
+          {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'post' %}">Post your message</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'create_category' %}">Create New Category</a>
+            </li>
+          </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'register' %}">Register Now</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Sign in</a>
+            </li>
+          {% endif %}
+          
+          
+        </ul>
+      </div>
     </div>
-    <!--End main content -->
+  </nav>  
+ <br/>
+  <div class="container">
+      {% block content %}
+      {% endblock %}
+  </div>
+</body>
+</html>
   
-  <!--Start Footer -->
-    <footer>
-        <div class="container footer">
-            <p>Designed by Arthur Neto © 2022</p>
-        </div>
-    </footer>
-  <!--End Footer -->
-
-  <script src="./js/script.js"></script>
-  </body>
-
-
+    <!--Nav starts-->
+    
+           <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 </html>
