--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,100&family=Open+Sans:wght@300;400;700;800&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+}
 
-.container{
-    color: blue;
+
+.background-image {
+    width: 200px;
+    height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
