--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -34,12 +34,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">About</a>
-          </li>
-         
-          
-          <!---Category Menu Code-->
+          <!---Account  Menu Code-->
           {% if caty_menu %}
           
             <li class="nav-item dropdown">
@@ -51,9 +46,8 @@
                   <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Account Settings</a></li>
                   <li><a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a></li>
                   <li><a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Profile Page</a></li>
-                  
-                {%else %}
-                    <li><a class="dropdown-item" href="{% url 'create_profile_page'%}">Create Bio Page</a></li>
+                  <li><a class="dropdown-item" href="{% url 'create_profile_page'%}">Create Bio Page</a></li>
+
                 {% endif %}
               </ul>
             </li>
@@ -92,7 +86,7 @@
 </body>
 </html>
   
-    <!--Nav starts-->
+    <!--Nav end-->
     
            <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
