--- a/members_signup/templates/registration/login.html
+++ b/members_signup/templates/registration/login.html
@@ -3,13 +3,25 @@
 
 {% block content %}
 
-<h1> Login in</h1>
-<br/><br/>
-<div class="mb-3">
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-secondary">Login</button>
+<div class="container">
+        <div class="row">
+            <div class="col-md-8 mt-3 offset-md-2">
+                <h3> Login in</h3>
+
+            </div>
+      </div>
+ <div class="row">
+    <div class="col-md-8 mt-3 offset-md-2">
+
+
+        <form class="login" method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button class="btn btn-secondary">Login</button>
+            <br>
+            <p>Please create an aacount to make a comment or like a post</p>
     </div>
+
+</div>
 
 {% endblock %}
