--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,10 +4,20 @@
     padding: 0;
 }
 
+.wrapper {    
+	margin-top: 80px;
+	margin-bottom: 20px;
+}
 
-.background-image {
-    width: 200px;
-    height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
+.form-signin-heading {
+    text-align:center;
+    margin-bottom: 30px;
+}
+
+.form-signin {
+    max-width: 420px;
+    padding: 30px 38px 66px;
+    margin: 0 auto;
+    background-color: #eee;
+    border: 3px dotted rgba(0,0,0,0.1);  
 }
