--- a/members_signup/templates/registration/login.html
+++ b/members_signup/templates/registration/login.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block title%} Login{% endblock %}
+{% load static %}
 
 {% block content %}
 
@@ -13,6 +14,7 @@
               <div class="col-xs-6 col-sm-6 col-md-6">
                 <button class="btn btn-secondary">Login</button>
               </div>
+            </form>
         </div>
             
     </div>
