style index page with boostrap

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,69 +7,6 @@
 
 /*Cover Picture*/
 
-.home-container {
-    width: 100%;
-    display: flex;
-    background: #ffc728;
-    padding: 50px;
-    box-sizing: border-box;
-    flex-direction: row;
-}
-
-.internalcontainerL {
-    flex: 1;
-    background: red;
-    padding:30px;
-    font-size:12px;
-    margin: 3px;
-}
-
-.internalcontainerM {
-    flex: 1;
-    background: pink;
-    padding:30px;
-    font-size:12px;
-    margin: 3px;
-}
-
-.internalcontainerR {
-    flex: 1;
-    background: green;
-    padding:30px;
-    font-size:12px;
-    margin: 3px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*Media Query*/
-
-/*Content Cover*/
-
-@media screen and (max-width: 768px){
- .home-container {
-     flex-direction: column;
- }
+.header{
+    background: 'url(../japan.jpg) top/cover no-repeat';
 }
