--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -1,7 +1,6 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html class="h-100">
 
 
 <html lang="en">
@@ -21,8 +20,7 @@
     <title>{% block title %}Travel, World!| Blog!{% endblock %}</title>
 
   </head>
-
-
+  
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
@@ -75,16 +73,18 @@
         </div>
       </div>
     </nav>
+
+   
    
    {% block content %}
 
-   {% endblock content %}
-   </main>
-   <!---Footer-->
-   <!--end footer-->
+   {% endblock %}
+        <!---Footer-->
+        <!--end footer-->
  </body>
+
+ 
  <!-- Popper -->
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
-</script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </html>
 
