style post blog section

--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -34,7 +34,7 @@
                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                 <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
               </div>
-              <small class="text-muted">9 mins</small>
+              <a class="py-2 px-3 mb-2" href="#"><i class="mr-2 fa fa-calendar" aria-hidden="true"></i> 15 march </a>
             </div>
           </div>
         </div>
@@ -50,7 +50,7 @@
                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                 <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
               </div>
-              <small class="text-muted">9 mins</small>
+              <a class="py-2 px-3 mb-2" href="#"><i class="mr-2 fa fa-calendar" aria-hidden="true"></i> 15 march </a>
             </div>
           </div>
         </div>
@@ -66,11 +66,58 @@
                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                 <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
               </div>
-              <small class="text-muted">9 mins</small>
+              <a class="py-2 px-3 mb-2" href="#"><i class="mr-2 fa fa-calendar" aria-hidden="true"></i> 15 march </a>
             </div>
           </div>
         </div>
       </div>
+      <aside class="blog-post py-4">
+         <div class="container">
+              <div class="row">
+                <div class="social-links row text-center">
+                  <div class="col-sm-4 py-5 primary-color">
+                    <a class="social_link w-100">
+                      <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </a>
+                  </div>
+                  <div class="col-sm-4 py-5 secondary-color">
+                    <a class="social_link w-100">
+                      <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                  </div>
+                  <div class="col-sm-4 py-5 third-color">
+                    <a class="social_link w-100">
+                      <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a>
+                  </div>
+                </div>
+                <h4 class="aside-heading mt-4 mb-3 pl-2">Popular Authors</h4>
+                <article class="row author mb-3">
+                    <div class="col-sm-4 py-4">
+                      <img class="img-fluid rounded-circle" alt="" src="./img/02.jpg">
+                    </div>
+                    <div class="author col-sm-8">
+                        <h5 class="m-0">John Doe</h5>
+                          <p class="m-0">orem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs.</p>
+                          <p class="m-0">The passage is attributed to an unknown typesetter in the 15th century who is thought to have</p>
+                          <div class="social-links">
+                            <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+    
+                          </div>
+                    </div>
+                  </article>
+                  <h4 class="aside-heading mt-4 mb-3 pl-2">Popular Categories</h4>
+                  <div class="badges w-100">
+                    <a href="#"> tecnology </a>
+                    <a href="#"> Programming </a>
+                  </div>
+              </div>
+         </div>
+        </aside>
+
+
 
 {% endblock %}
 
