fixed the issue with statement

--- a/world/templates/details_article.html
+++ b/world/templates/details_article.html
@@ -49,7 +49,7 @@ method="POST">
 
     {% endif %}
 
-        -{{ likes_total }} likes
+    <p class="fa fa-thumbs-o-up" aria-hidden="true">{{post.likes_total }}</i></p>
 </form>
 
 <br><br/>
