--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,49 +1,9 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    font-family: poppins;
-    box-sizing: border-box;
-}
-
-a {
-    text-decoration: none;
-}
-
-ul {
-    list-style: none;
-}
-
-body {
-    margin: 0px;
-    padding: 0px;
-    font-family: poppins;
-}
-
-/*--blog content*/
-
-#blog {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 40px;
-    border-bottom: 1px solid rgba(0,0,0,0,0.5);
-
-}
-
-.blog-heading {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.blog-heading span {
-    color:#f33c3c
-}
-
-.blog-heading h3 {
-    font-size: 2.4rem;
-    color: #2b2b2b;
-    font-weight: 600;
+.banner {
+    background-color: #f33c3c;
+    max-height: 15rem;
+    padding-top: 15rem;
+    background: url('../img/cover-img.jpg');
+    background-size: cover;
+    background-position: center;
+    position: relative;
 }
