--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -31,50 +31,45 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'index' %}">Hello World Blog!</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <!---Account  Menu Code-->
-            {% if caty_menu %}
-            
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  {{ user.first_name }} {{ user.last_name }}
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  {% if user.profile.user %}
-                    <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Account Settings</a></li>
-                    <li><a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a></li>
-                    <li><a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Profile Page</a></li>
-                    <li><a class="dropdown-item" href="{% url 'create_profile_page'%}">Create Bio Page</a></li>
-  
-                  {% endif %}
-                </ul>
-              </li>
-            
-            {% endif %}
-            {% if user.is_authenticated %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'post' %}">Post your message</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'create_category' %}">Create New Category</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-              </li>
-             {% else %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'register' %}">Register Now</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">Sign in</a>
-              </li>
-            {% endif %}
-            
-            
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+         <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <!---Account  Menu Code-->
+                    <li class="nav-item dropdown">
+             {% if caty_menu %}
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    {{ user.first_name }} {{ user.last_name }}</a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    {% if user.profile.user %}
+                        <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Account Settings</a></li>
+                        <li><a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a></li>
+                        <li><a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Profile Page</a></li>
+                        <li><a class="dropdown-item" href="{% url 'create_profile_page'%}">Create Bio Page</a></li>
+                    {% endif %}
+                    </ul>
+
+                    {% endif %}
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'post' %}">Post your message</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'create_category' %}">Create New Category</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'register' %}">Register Now</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">Sign in</a>
+                    </li>
+                </li>
+             {% endif %}
           </ul>
         </div>
       </div>
