--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -1,84 +1,63 @@
-{% extends 'base.html' %}
-{% load static %}
+{% extends "base.html" %}
+
 {% block content %}
 
-
-<div class="py-5 text-center container">
-    <div class="row py-lg-5">
-         <div class="col-lg-6 col-md-8 mx-auto">
-              <h1 class="fw-light">Share your Adventure Moments!</h1>
-              <p class="lead text-muted">With Hello World Blog! you can share your moments worldwide...</p>
-             <div class="d-grid gap-2 col-6 mx-auto">
-                <a href="{% url 'create_category' %}" class="btn-primary">Create New Category</a>
-                <a href="{% url 'post' %}" class="btn-secondary">Post your message</a>
-            </div>
-         </div>
+<div class="main-base">
+  <div class="banner">
+    <div class="image-banner">
     </div>
-</div>
+    <div class="container-fluid">
+      <div class="row">
+        <!-- Blog Entries Column -->
+        <div class="col-12 mt-3 left">
+          <div class="row">
+            {% for post in post_list %}
+            <div class="col-md-4">
+              <div class="card mb-4">
+                <div class="card-body">
+                  <div class="image-container">
+                    {% if "placeholder" in post.featured_image.url %}
+                    <img class="card-img-top" src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg">
+                    {% else %}
+                    <img class="card-img-top" src=" {{ post.image.url }}">
+                    {% endif %}
+                    <a href="{% url 'details-article' post.pk  %}" class="post-link">
+                      <h2 class="card-title">{{ post.title }}</h2>
+                    </a>
+                    <div class="image-flash">
+                      <p class="author">Author: {{ post.author }}</p>
+                      <p class="card-text text-muted h6">{{ post.body|slice:":200"|safe }}</p>
+                    </div>
+                  </div>
+                  <hr />
+                  <p class="card-text text-muted h6">{{ post.publish_date}}</p>
+                  <p class="fa fa-thumbs-o-up" aria-hidden="true">{{post.post_like }}</i>
+                </div>
+              </div>
+            </div>
+            {% if forloop.counter|divisibleby:3 %}
+          </div>
+          <div class="row">
+            {% endif %}
+            {% endfor %}
 
-
-<section id="blog">
-  <div class="blog-heading">
-    <span>My recents Posts</span>
-    <h3>Blog Post</h3>
-  </div>
-
-
-  <!--blog container-->
-  
-  <div class="row g-5">
-    <div class="col-md-8"> 
-      <article class="blog-post">
-  {% for post in object_list %}
-      
-          <h2><a href="{% url 'details-article' post.pk %}" class="blog-post-title">{{ post.title }} </a></h2>
-
-  {% endfor %}
-        <div class="col-md-1">
-          <img class="img-fluid rounded-circle" src="../im" alt="Author" >
-        </div>
-        <p class="blog-post-meta">January 1, 2021 by <a href="#">Author</a></p>
-
-        <p>Text from the blog here</p>
-        <div class="d-flex justify-content-between align-items-center">
-          <div class="btn-group">
-            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
           </div>
         </div>
-      </article>
-    </div>
-  <div class="col-md-4">
-    <div class="position-sticky" style="top: 2rem;">
-      <div class="p-4 mb-3 bg-light rounded">
-        <h4 class="fst-italic">About</h4>
-        <p class="mb-0">Customize this section </p>
       </div>
+      {% if is_paginated %}
+      <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+          {% if page_obj.has_previous %}
+          <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
+          {% endif %}
+          {% if page_obj.has_next %}
+          <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
 
-      <div class="p-4">
-        <h4 class="fst-italic">Archives</h4>
-        <ol class="list-unstyled mb-0">
-          <li><a href="#">March 2021</a></li>
-          <li><a href="#">February 2021</a></li>
-        </ol>
-      </div>
+          {% endif %}
+        </ul>
+      </nav>
+      {% endif %}
     </div>
   </div>
-
-
 </div>
-
-
-
-</section>
-
 {% endblock %}
-
-<footer class="text-muted py-5">
-  <div class="container">
-    <p class="float-end mb-1">
-      <a href="#">Back to top</a>
-    </p>
-    <p class="mb-1">COrp 2022</p>
-  </div>
-</footer>
