--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,6 +21,42 @@ body{
 }
 
 
+.main-post p{
+    color:#fff;
+    padding: 7px;
+    display: flex;
+    font-size:13px;
+    flex-direction: column;
+    letter-spacing: 3px;
+}
+
+
+.card-body img{
+   width: 100%;
+}
+
+
+.author {
+    font-size: 14px;
+    margin-bottom: 2px;
+    color: #bf7070;
+    text-align: center;
+}
+
+.card-title {
+    margin-top: 1rem;
+    line-height: 1.6;
+    font-weight: 700;
+    color: #fff;
+    text-align: center;
+    text-transform:uppercase;
+    font-size: 20px;
+}
+
+.card-title:hover{
+    transition: all ease 0.3s;
+    color: #bf7070;
+}
 
 .banner {
     max-height: 15rem;
