--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -12,6 +12,8 @@
     <meta name="keyword" content="travel, blog, food, countries, holidays, homecation" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
+    <!--fav-icon-->
+    <link rel="shortcut icon" href="{% static 'img/airplane-48.png' %}">
     <!--Boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!--FontAwesome-->
