--- a/world/templates/footer.html
+++ b/world/templates/footer.html
@@ -7,9 +7,9 @@
       <span class="text-muted">Designed by Arthur Neto &copy;2022. All rights reserved</span>
     </div>
     <div class="social-links">
-      <a href="https://facebook.com/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-      <a href="https://instagram.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-      <a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+      <a href="https://facebook.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+      <a href="https://instagram.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+      <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 
     </div>
 </footer>
