--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -1,63 +1,118 @@
 {% extends "base.html" %}
 
+
 {% block content %}
 
-<div class="main-base">
-    
-    <div class="banner">
-        <div class="container-fluid">
-            <div class="row">
-        
-                <!-- Blog Entries Column -->
-                <div class="col-12 mt-3 left">
-                    <div class="row">
-                        {% for post in object_list %}
-                        <div class="col-md-4">
-                            <div class="card mb-4">
-                                <div class="card-body">
-                                    <div class="image-container">
-                                        {% if "placeholder" in post.featured_image.url %}
-                                        <img class="card-img-top"
-                                            src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg">
-                                        {% else %}
-                                        <img class="card-img-top" src=" {{ post.header_img.url  }}">
-                                        {% endif %}
-                                    </div>
-                                    <a href="{% url 'details_article' post.pk  %}" class="post-link">
-                                        <h2 class="card-title">{{ post.title }}</h2>
-                                    </a>
-                                    <div class="image-flash">
-                                      <p class="author">Author: {{ post.author }}</p>
-                                      <p class="card-text">{{ post.body|slice:":200"|safe }}</p>
-                
-                                    </div>
-                                    <hr/>
-                                    <p class="card-text text-muted h6">{{ post.publish_date}}</p>
-                                    <p class="fa fa-thumbs-o-up" aria-hidden="true">{{post.post_like }}</i>
-                                </div>
-                            </div>
-                        </div>
-                        {% endfor %}
-        
-                    </div>
-                </div>
-            </div>
-            
-            {% if is_paginated %}
-                <nav aria-label="Page navigation">
-                <div class="pagination">
-                {% if page_obj.has_previous %}
-                    <a href="?page={{ page_obj.previous_page_number }}" class="bottom-link">
-                    &laquo; Newer Posts </a>
-                {% endif %}
-                {% if page_obj.has_next %}
-                    <a href="?page={{ page_obj.next_page_number }}" class="bottom-link"> Older
-                    Posts &raquo; </a>
 
-             {% endif %}
-             
+<div class="main-base">
+
+    <div class="banner">
+
+        <div class="banner-image"></div>
+
+        <div class="banner-body">
+
+            <div class="container-lg">
+
+                <div class="row">
+
+                    <div class="col-12 mt-3 left">
+
+                        <div class="row">
+
+                            {% for post in object_list %}
+
+                            <div class="col-md-4">
+
+                                <div class="card mb-4 border-0">
+
+                                    <div class="card-body">
+
+                                        <div class="image-container">
+
+                                            {% if "placeholder" in post.featured_image.url %}
+
+                                            <img class="card-img-top"
+
+                                                src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg">
+
+                                            {% else %}
+
+                                            <img class="card-img-top" src=" {{ post.header_img.url  }}">
+
+                                            {% endif %}
+
+                                        </div>
+
+                                        <a href="{% url 'details_article' post.pk  %}" class="post-link">
+
+                                            <h2 class="card-title">{{ post.title }}</h2>
+
+                                        </a>
+
+                                        <div class="image-flash">
+
+                                            <p class="author">Author: {{ post.author }}</p>
+
+                                            <p class="card-text">{{ post.body|slice:":200"|safe }}</p>
+
+
+                                        </div>
+
+                                        <hr />
+
+                                        <p class="card-text text-muted h6">{{ post.publish_date}}</p>
+
+                                        <p class="fa fa-thumbs-o-up" aria-hidden="true">{{post.post_like }}</i>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            {% endfor %}
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+                {% if is_paginated %}
+
+                <nav aria-label="Page navigation">
+
+                    <div class="pagination">
+
+                        {% if page_obj.has_previous %}
+
+                        <a href="?page={{ page_obj.previous_page_number }}" class="bottom-link">
+
+                            &laquo; Newer Posts </a>
+
+                        {% endif %}
+
+                        {% if page_obj.has_next %}
+
+                        <a href="?page={{ page_obj.next_page_number }}" class="bottom-link"> Older
+
+                            Posts &raquo; </a>
+
+                        {% endif %}
+
+                    </div>
+
+                </nav>
+                {% endif %}
             </div>
-            </nav>
-    {% endif %}
+            {% include "footer.html" %}
+        </div>
+
+    </div>
     
+</div>
+
+
 {% endblock %}
+
